[project]
name = "spakky-oidc"
version = "6.5.0"
description = "OIDC bearer authentication provider plugin for Spakky framework"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Spakky", email = "sejong418@icloud.com" }]
dependencies = [
    "pyjwt[crypto]>=2.10.1",
    "spakky>=6.5.0",
    "spakky-auth>=6.5.0",
]

[project.entry-points."spakky.plugins"]
spakky-oidc = "spakky.plugins.oidc.main:initialize"

[project.entry-points."spakky.contributions.spakky.auth"]
spakky-oidc = "spakky.plugins.oidc.contributions.auth:initialize"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "spakky.plugins.oidc"

[tool.pyrefly]
python-version = "3.12"
search_path = ["src", ".", "../../core/spakky/src", "../../core/spakky-auth/src"]
project_excludes = ["**/__pycache__", "**/*.pyc"]

[tool.ruff]
builtins = ["_"]
cache-dir = "~/.cache/ruff"

[tool.pytest.ini_options]
pythonpath = ["src", "../../core/spakky/src", "../../core/spakky-auth/src"]
testpaths = "tests"
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = """
    --cov
    --cov-report=term
    --cov-report=xml
    --no-cov-on-fail
    --strict-markers
    --dist=load
    -p no:warnings
    -n auto
    --spec
"""
spec_test_format = "{result} {docstring_summary}"

[tool.coverage.run]
include = ["src/spakky/plugins/oidc/**/*.py"]
branch = true

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 100
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "@(typing\\.)?overload",
    "\\.\\.\\.",
    "pass",
]

[tool.uv.sources]
spakky = { workspace = true }
spakky-auth = { workspace = true }
