[project]
name = "spakky-outbox-sqlalchemy"
version = "6.0.0"
description = "SQLAlchemy implementation for spakky-outbox plugin"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Spakky", email = "sejong418@icloud.com" }]
dependencies = ["spakky-outbox>=6.0.0", "spakky-sqlalchemy>=6.0.0"]

[project.entry-points."spakky.plugins"]
spakky-outbox-sqlalchemy = "spakky.plugins.outbox_sqlalchemy.main:initialize"

[dependency-groups]
dev = [
    "greenlet>=3.0.0",
    "psycopg[binary]>=3.0.0",
    "pytest-integration-mark>=0.2.0",
    "testcontainers[postgres]>=4.0.0",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "spakky.plugins.outbox_sqlalchemy"

[tool.pyrefly]
python-version = "3.14"
search_path = ["src", "."]
project_excludes = ["**/__pycache__", "**/*.pyc"]

[tool.ruff]
builtins = ["_"]
cache-dir = "~/.cache/ruff"

[tool.pytest.ini_options]
pythonpath = "src/spakky/plugins/outbox_sqlalchemy"
testpaths = "tests"
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = """
    --cov
    --cov-report=term
    --cov-report=xml
    --no-cov-on-fail
    --strict-markers
    --dist=loadfile
    -p no:warnings
    -n auto
    --spec
"""
spec_test_format = "{result} {docstring_summary}"
markers = [
    "known_issue(reason): 알려진 버그",
    "integration: testcontainers 기반 통합 테스트 (느림)",
]

[tool.pytest-integration-mark]
integration_path = "tests/integration"

[tool.coverage.run]
include = ["src/spakky/plugins/outbox_sqlalchemy/*"]
branch = true
