[project]
name = "spakky-outbox"
version = "0.0.1"
description = "Transactional Outbox plugin for Spakky framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Spakky", email = "sejong418@icloud.com" }]
dependencies = [
    "spakky-event>=5.0.1",
    "spakky-sqlalchemy>=0.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "testcontainers[postgres]>=4.13.3",
    "psycopg[binary]>=3.2.6",
    "greenlet>=3.1.0",
]

[project.entry-points."spakky.plugins"]
spakky-outbox = "spakky.plugins.outbox.main:initialize"

[build-system]
requires = ["uv_build>=0.9.13,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "spakky.plugins.outbox"

[tool.pyrefly]
python-version = "3.14"
search_path = ["src", "."]
project_excludes = ["**/__pycache__", "**/*.pyc"]

[tool.ruff]
builtins = ["_"]
cache-dir = "~/.cache/ruff"

[tool.pytest.ini_options]
pythonpath = ["src/spakky/plugins/outbox", "."]
testpaths = "tests"
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = ["known_issue(reason): 알려진 버그"]
addopts = """
    --cov
    --cov-report=term
    --cov-report=xml
    --no-cov-on-fail
    --strict-markers
    --dist=loadfile
    -p no:warnings
    -n auto
    --spec
"""
spec_test_format = "{result} {docstring_summary}"

[tool.coverage.run]
include = ["src/spakky/plugins/outbox/*"]
branch = true

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 90
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "@(typing\\.)?overload",
    "\\.\\.\\.",
    "pass",
]

[tool.uv.sources]
spakky-event = { workspace = true }
spakky-sqlalchemy = { workspace = true }
