[project]
name = "spakky-redis"
version = "6.4.0"
description = "Redis cache backend plugin for Spakky Framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Spakky", email = "sejong418@icloud.com" }]
dependencies = [
    "pydantic-settings>=2.13.1",
    "redis>=7.1.0",
    "spakky-cache>=6.4.0",
]

[project.entry-points."spakky.plugins"]
spakky-redis = "spakky.plugins.redis.main:initialize"

[dependency-groups]
dev = [
    "fakeredis>=2.32.1",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "spakky.plugins.redis"

[tool.pyrefly]
python-version = "3.11"
search_path = ["src", ".", "../../core/spakky/src", "../../core/spakky-cache/src"]
project_excludes = ["**/__pycache__", "**/*.pyc"]

[tool.ruff]
builtins = ["_"]
cache-dir = "~/.cache/ruff"

[tool.pytest.ini_options]
pythonpath = ["src", "../../core/spakky/src", "../../core/spakky-cache/src"]
testpaths = "tests"
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = """
    --cov
    --cov-report=term
    --cov-report=xml
    --no-cov-on-fail
    --strict-markers
    --dist=loadfile
    -p no:warnings
    -n auto
    --spec
"""
spec_test_format = "{result} {docstring_summary}"

[tool.coverage.run]
include = ["src/spakky/plugins/redis/**/*.py"]
branch = true

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 90
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "@(typing\\.)?overload",
    "\\.\\.\\.",
    "pass",
]

[tool.uv.sources]
spakky = { workspace = true }
spakky-cache = { workspace = true }
