[project]
name = "spakky-security"
version = "3.1.3"
description = "Security utilities plugin for Spakky framework"
readme = "README.md"
authors = [{ name = "Spakky", email = "sejong418@icloud.com" }]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "argon2-cffi>=25.1.0",
    "bcrypt>=5.0.0",
    "pycryptodome>=3.23.0",
    "spakky>=3.1.3",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.commitizen]
name = "cz_conventional_commits"
version = "3.1.3"
tag_format = "spakky-security-v$version"
version_files = ["pyproject.toml:version"]
update_changelog_on_bump = true
major_version_zero = true
changelog_file = "CHANGELOG.md"

[tool.pyrefly]
python-version = "3.14"
search_path = ["src"]
project_excludes = ["**/__pycache__", "**/*.pyc"]

[tool.ruff]
builtins = ["_"]
cache-dir = "~/.cache/ruff"

[tool.pytest.ini_options]
pythonpath = "src/spakky_security"
testpaths = "src/tests"
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = """
    --cov
    --cov-report=term
    --cov-report=xml
    --no-cov-on-fail
    --strict-markers
    --dist=loadfile
    -p no:warnings
    -n auto
    -vv
"""

[tool.coverage.run]
include = ["src/spakky_security/*"]
branch = true

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 90
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "@(typing\\.)?overload",
]
