[project]
name = "spakky-typer"
version = "6.3.1"
description = "Typer CLI plugin for Spakky framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Spakky", email = "sejong418@icloud.com" }]
dependencies = ["spakky>=6.3.1", "typer>=0.24.1"]

[project.entry-points."spakky.plugins"]
spakky-typer = "spakky.plugins.typer.main:initialize"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "spakky.plugins.typer"

[tool.pyrefly]
python-version = "3.11"
search_path = ["src", "."]
project_excludes = ["**/__pycache__", "**/*.pyc"]

[tool.ruff]
builtins = ["_"]
cache-dir = "~/.cache/ruff"

[tool.pytest.ini_options]
pythonpath = "src/spakky/plugins/typer"
testpaths = "tests"
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = """
    --cov
    --cov-report=term
    --cov-report=xml
    --no-cov-on-fail
    --strict-markers
    --dist=load
    -p no:warnings
    -n auto
    --spec
"""
spec_test_format = "{result} {docstring_summary}"

[tool.coverage.run]
include = ["src/spakky/plugins/typer/**/*.py"]
branch = true

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 90
skip_empty = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "@(abc\\.)?abstractmethod",
  "@(typing\\.)?overload",
  "\\.\\.\\.\\.",
  "pass",
]
