[project]
name = "spakky-vllm"
version = "6.6.1"
description = "vLLM OpenAI-compatible model adapter plugin for Spakky Agent"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Spakky", email = "sejong418@icloud.com" }]
dependencies = [
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "spakky>=6.6.1",
    "spakky-agent>=6.6.1",
]

[project.entry-points."spakky.plugins"]
spakky-vllm = "spakky.plugins.vllm.main:initialize"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "spakky.plugins.vllm"

[tool.pyrefly]
python-version = "3.12"
search_path = [
    "src",
    ".",
    "../../core/spakky/src",
    "../../core/spakky-agent/src",
]
project_excludes = ["**/__pycache__", "**/*.pyc"]

[tool.ruff]
builtins = ["_"]
cache-dir = "~/.cache/ruff"

[tool.pytest.ini_options]
pythonpath = [
    "src",
    "../../core/spakky/src",
    "../../core/spakky-agent/src",
]
testpaths = "tests"
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = """
    --cov
    --cov-report=term
    --cov-report=xml
    --no-cov-on-fail
    --strict-markers
    --dist=loadfile
    -p no:warnings
    -n auto
    --spec
"""
spec_test_format = "{result} {docstring_summary}"

[tool.coverage.run]
include = ["src/spakky/plugins/vllm/**/*.py"]
branch = true

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 100
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "@(typing\\.)?overload",
    "\\.\\.\\.",
    "pass",
]

[tool.uv.sources]
spakky = { workspace = true }
spakky-agent = { workspace = true }
